# AI-Healthcare-Project

./: .coverage  README.md  pyproject.toml  requirements.txt
config/: config.py
data/synthetic/: ecg_readings.json  metadata.json  patient_vitals.json
scripts/: generate_test_data.py  run_tests.py  start_server.py
src/: __init__.py
src/api/: __init__.py  main.py
src/models/: __init__.py  ecg_analyzer.py  ecg_data.py  risk_predictor.py
src/utils/: __init__.py  ecg_processor.py
tests/: __init__.py  conftest.py
tests/data/: __init__.py  test_synthetic_data.py
tests/integration/: test_api.py
tests/unit/: test_ecg_analyzer.py  test_ecg_processor.py  test_risk_predictor.py
